--- a/about.css
+++ b/about.css
@@ -1,34 +1,33 @@
-body{
-    font-family: 'Josefin Sans', sans-serif;
+body {
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .servCard {
-    margin: 2%;
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 5px;
+  margin: 2%;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
 }
 
 .cards {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    margin: 30px;
-    padding: 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  margin: 30px;
+  padding: 20px;
 }
 
 .cards img {
-    max-width: 40%;
-    height: auto;
-    transition: box-shadow 0.5s ease-in-out, transform 0.5s ease-in-out;
+  max-width: 40%;
+  height: auto;
+  transition: box-shadow 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
 .cards img:hover {
-    box-shadow: 15px 16px 30px 0px rgb(37, 44, 39);
-    -webkit-box-shadow: 15px 16px 30px 0px rgb(13, 40, 20);
-    -moz-box-shadow: 15px 16px 30px 0px rgb(71, 83, 74);
-    transform: translateY(10px);
+  box-shadow: 15px 16px 30px 0px rgb(37, 44, 39);
+  -webkit-box-shadow: 15px 16px 30px 0px rgb(13, 40, 20);
+  -moz-box-shadow: 15px 16px 30px 0px rgb(71, 83, 74);
+  transform: translateY(10px);
 }
-
 
 /* .cards img:hover {
     box-shadow: 15px 16px 30px 0px rgb(37, 44, 39);
@@ -39,37 +38,36 @@ body{
 } */
 
 .cards p {
-    padding: 2%;
-    max-width: 55%;
+  padding: 2%;
+  max-width: 55%;
 }
 
 .cards {
-    gap: 20px;
+  gap: 20px;
 }
 
 @media (max-width: 768px) {
-    .servCard {
-        margin: 5%;
-    }
+  .servCard {
+    margin: 5%;
+  }
 
-    .cards img {
-        max-width: 100%;
-    }
+  .cards img {
+    max-width: 100%;
+  }
 
-    .cards p {
-        max-width: 100%;
-    }
+  .cards p {
+    max-width: 100%;
+  }
 }
 
-
 .cards:nth-child(even) {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 /* typewriter textbox */
-  
-.company-details {
-    max-width: 90%; /* Adjust max-width based on your design */
+
+/* .company-details {
+    max-width: 90%;
     margin: 10px auto;
     padding: 20px;
     border-radius: 10px;
@@ -89,7 +87,7 @@ body{
 .typewriter-textbox {
     overflow: hidden;
     border-right: 1px solid #000;
-    /* white-space: nowrap; */
+    white-space: nowrap;
     margin: 0 auto;
     letter-spacing: 2px;
     animation: typing 3s steps(40, end), blink-caret 1.0s step-end infinite;
@@ -112,4 +110,4 @@ body{
     50% {
         border-right-color: transparent;
     }
-}
+} */
