--- a/main.css
+++ b/main.css
@@ -1,36 +1,36 @@
 body {
   /* background: #87CEEB; */
   /* height: 100vh; */
-    margin: 0;
-    padding: 0;
-    overflow-y: scroll;
-    font-family: Arial, sans-serif;
-    color: black;
-    font-family: 'Josefin Sans', sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    /* background: url(./background.jpg); */
-    background: url(./bg1.jpg);
-    animation: moveBackground 50s linear infinite;
-    background-size: cover;
-    background-repeat: no-repeat;
-    backdrop-filter: blur(3px);
-    background-color: #0D0A0B;  
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+  font-family: Arial, sans-serif;
+  color: black;
+  font-family: "Josefin Sans", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* background: url(./background.jpg); */
+  background: url(./images/bg1.jpg);
+  animation: moveBackground 50s linear infinite;
+  background-size: cover;
+  background-repeat: no-repeat;
+  backdrop-filter: blur(3px);
+  /* background-color: #0d0a0b; */
 }
 
 @keyframes moveBackground {
   from {
-      background-position: 0 0;
+    background-position: 0 0;
   }
   to {
-      background-position: 100% 0;
+    background-position: 100% 0;
   }
 }
 
 main {
-  background-color: #1A1718; /* A slightly lighter shade of the secondary color */
-  color: #FFFFFF; /* Set text color to white for better readability */
+  background-color: #1a1718; /* A slightly lighter shade of the secondary color */
+  color: #ffffff; /* Set text color to white for better readability */
 }
 
 /* Glassmorphism card effect */
@@ -69,7 +69,7 @@ main {
 .menu a {
   text-decoration: none;
   /* color: #FFFFFF; */
-  color: #AA722C;
+  color: #aa722c;
   font-weight: bold;
   font-size: 16px;
 }
@@ -112,7 +112,7 @@ main {
   max-height: 500px;
   overflow: hidden;
   position: relative;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .cardd img {
@@ -143,7 +143,7 @@ main {
 
 #sticky-footer {
   /* background-color: #333; */
-  background-color: #0D0A0B;
+  background-color: #0d0a0b;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -158,7 +158,7 @@ main {
   margin: 0 15px;
   font-size: 24px;
   /* color: #fff; */
-  color: #AA722C;
+  color: #aa722c;
   text-decoration: none;
   transition: opacity 0.3s ease-in-out;
 }
@@ -230,4 +230,5 @@ img {
   height: 100%;
   object-fit: cover;
   border-radius: 8px;
+  background-blend-mode: color-burn;
 }
