--- a/main.css
+++ b/main.css
@@ -185,7 +185,7 @@ main {
 }
 
 .card-inner {
-  width: 400;
+  width: 400px;
   height: 400px;
   position: relative;
   transform-style: preserve-3d;
