Updated Home Page

--- a/services.css
+++ b/services.css
@@ -1,81 +1,9 @@
-/* .servHead {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-container-services {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.custom-card-services {
-  perspective: 1000px;
-  margin: 10px;
-}
-
-.card-inner-services {
-  width: 300px;
-  height: 400px;
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 1s;
-}
-
-.custom-card-services:hover .card-inner-services {
-  transform: rotateY(180deg);
-}
-
-.card-front-services,
-.card-back-services {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.card-front-services {
-  transform: rotateY(0deg);
-}
-
-.card-back-services {
-  transform: rotateY(180deg);
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 20px;
-  background: transparent; comment
-  backdrop-filter: blur(10px); comment
-  opacity: 0.8;
-}
-
-.card-back-services p {
-  margin: 0;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
-.text-over {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(22, 20, 24);
@@ -83,92 +11,92 @@ body {
   user-select: none;
 }
 
-.nft{
-  user-select:none;
+.nft {
+  user-select: none;
   max-width: 300px;
   margin: 5rem auto;
   border: 1px solid #ffffff22;
   background-color: #2b3428;
   /* background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%); */
-  background: linear-gradient(0deg, black 0%, rgba(17,0,32,.5) 100%);
+  background: linear-gradient(0deg, black 0%, rgba(17, 0, 32, 0.5) 100%);
   box-shadow: 0 7px 20px 5px #00000088;
-  border-radius: .7rem;
+  border-radius: 0.7rem;
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   overflow: hidden;
-  transition: .5s all;
-  hr{
+  transition: 0.5s all;
+  hr {
     width: 100%;
     border: none;
     border-bottom: 1px solid #88888855;
     margin-top: 0;
   }
-  ins{
+  ins {
     text-decoration: none;
   }
-  .main{
+  .main {
     display: flex;
     flex-direction: column;
     width: 90%;
     padding: 1rem;
-    .tokenImage{
-      border-radius: .5rem;
+    .tokenImage {
+      border-radius: 0.5rem;
       max-width: 100%;
       height: 250px;
       object-fit: cover;
     }
-    .description{
-      margin: .5rem 0;
-      color: #AA722C;
+    .description {
+      margin: 0.5rem 0;
+      color: #aa722c;
       line-height: 1.5pc;
     }
-    .tokenInfo{
+    .tokenInfo {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      .price{
+      .price {
         display: flex;
         align-items: center;
         color: #ee83e5;
         font-weight: 700;
-        ins{
-          margin-left: -.3rem;
-          margin-right: .5rem;
+        ins {
+          margin-left: -0.3rem;
+          margin-right: 0.5rem;
         }
       }
-      .duration{
+      .duration {
         display: flex;
         align-items: center;
         color: #a89ec9;
-        margin-right: .2rem;
-        ins{
-          margin: .5rem;
-          margin-bottom: .4rem;
+        margin-right: 0.2rem;
+        ins {
+          margin: 0.5rem;
+          margin-bottom: 0.4rem;
         }
       }
     }
-    .creator{
+    .creator {
       display: flex;
       align-items: center;
-      margin-top: .2rem;
-      margin-bottom: -.3rem;
+      margin-top: 0.2rem;
+      margin-bottom: -0.3rem;
       p {
         font-size: 0.9rem;
       }
-      ins{
+      ins {
         color: #a89ec9;
         text-decoration: none;
       }
-      .wrapper{
+      .wrapper {
         display: flex;
         align-items: center;
         border: 1px solid #ffffff22;
-        padding: .3rem;
+        padding: 0.3rem;
         margin: 0;
-        margin-right: .5rem;
+        margin-right: 0.5rem;
         border-radius: 100%;
         box-shadow: inset 0 0 0 4px #000000aa;
-        img{
+        img {
           border-radius: 100%;
           border: 1px solid #ffffff22;
           width: 2rem;
@@ -179,7 +107,7 @@ body {
       }
     }
   }
-  ::before{
+  ::before {
     position: fixed;
     content: "";
     box-shadow: 0 0 100px 40px #ffffff08;
@@ -187,28 +115,28 @@ body {
     left: -100%;
     transform: rotate(-45deg);
     height: 60rem;
-    transition: .7s all;
+    transition: 0.7s all;
   }
-  &:hover{
+  &:hover {
     border: 1px solid #ffffff44;
     box-shadow: 0 7px 50px 10px #000000aa;
     /* transform: scale(1.015); */
     transform: scale(1.075);
     filter: brightness(1.3);
-    ::before{
-      filter: brightness(.5);
+    ::before {
+      filter: brightness(0.5);
       top: -100%;
       left: 200%;
     }
   }
 }
 
-.bg{
+.bg {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  h2{
+  h2 {
     font-size: 15rem;
     filter: opacity(0.5);
   }
@@ -220,4 +148,50 @@ body {
   flex-wrap: wrap;
   max-width: max-content;
   margin: auto;
+}
+
+hr {
+  width: 85pc;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.box-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.box {
+  width: calc(33.33% - 20px);
+  margin: 20px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.box img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px; /* Optional: Add border-radius for rounded corners */
+}
+
+.box-text {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .box {
+    width: calc(50% - 20px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .box {
+    width: 100%;
+  }
 }
